updated the footer and try and resetbuttons to be in the correct space and edited the page to look better in mobile. Bugs: only randomizes once, cards over extend bottom on mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,7 +2,7 @@
 
 .header {
     background-color: #292928;
-    color: 	rgb(211, 211, 211)
+    color: 	rgb(211, 211, 211);
 }
 
 /*-------------------------------------------------------------   Navigation bar       */
@@ -14,6 +14,10 @@
     padding-right: 40px;
     padding-left: 40px;
     font-size: 25px;
+}
+
+.nav-bar {
+    margin-bottom: 0px;
 }
 
 .nav-item a:hover{
@@ -71,6 +75,7 @@ body {
 
 .index-board {
     padding-bottom: 20px;
+    padding-top: 30px;
 }
 
 .information {
@@ -80,6 +85,19 @@ body {
 
 .sidebar {
     background-color: #292928;
+}
+
+.resettry {
+    display: inline-block;
+    padding-left: 25px;
+    padding-right: 25px;
+    text-align: center;
+    font-size: 20px;
+}
+
+.resetbutton {
+    background-color: transparent;
+    color: #292928;
 }
 
 /*-------------------------------------------------------------   Cards and their flipping       */
@@ -139,6 +157,7 @@ img {
 
 .main-page {
     background-image: url('../images/backgroundhomecap.png');
+    background-repeat: round;
     width: 100%;
     height: 100%;
 }
@@ -175,9 +194,12 @@ img {
 .footer {
     background-color: #292928;
     color: 	#F5F5F5;
+    margin: 0px;
+    flex-shrink: 0;
 }
 
-.footer {
-  flex-shrink: 0;
-  
+.footercontent {
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-left: 20px;
 }
